Bug 346043 - Reset selected index correctly after closing drop-down menu. r=roc